packages/webassemblyjs/test/fixtures/conversions/type-errors/convert_s-f32-i32/module.wast
(module (func (result f32) (f32.convert_s/i32 (i64.const 0))))
